--- a/styles.css
+++ b/styles.css
@@ -88,6 +88,7 @@ body {
     color: black;
     border: none;
     padding: 10px;
+    width: 180px;
     margin: 5px 0;
     border-radius: 5px;
     cursor: pointer;
