--- a/styles.css
+++ b/styles.css
@@ -139,7 +139,7 @@ body {
 .post p {
     margin: 5px 0 0;
     background-color: white;
-    font-size: 16px;
+    font-size: 32px;
     padding: 10px;
     border-radius: 5px;
     margin-top: 5px;
@@ -148,18 +148,18 @@ body {
 
 /* General Login & Signup Page Styling */
 .login-page, .signup-page {
-    background-color: #4CAF50; /* Green background */
+    background-color: #4CAF50;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: flex-start; /* Align items to the top */
+    justify-content: flex-start;
     height: 100vh;
-    padding-top: 80px; /* Moves form higher */
+    padding-top: 80px;
 }
 
 /* Container Box for Forms */
 .container {
-    background-color: #8c5a2b; /* Brown box */
+    background-color: #8c5a2b;
     padding: 30px;
     border-radius: 10px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
@@ -180,7 +180,7 @@ body {
     margin: 10px 0;
     border-radius: 5px;
     border: none;
-    background-color: #f7a800; /* Yellow input fields */
+    background-color: #f7a800;
     color: black;
     font-size: 16px;
 }
@@ -189,7 +189,7 @@ body {
 .container .btn {
     width: 100%;
     padding: 10px;
-    background-color: #3b3b3b; /* Dark button */
+    background-color: #3b3b3b;
     color: white;
     border: none;
     border-radius: 5px;
@@ -242,7 +242,6 @@ body {
 
 
 #post-content {
-    width: 100%;
     height: 80px;
     border-radius: 5px;
     padding: 10px;
@@ -273,7 +272,7 @@ body {
 }
 
 .reply {
-    background-color: #f7a800; /* White background */
+    background-color: #f7a800;
     margin-top: 5px;
     border: 1px solid #ccc;
     border-radius: 5px;
